[gd_scene load_steps=19 format=3 uid="uid://dp43g47q8jjmd"]

[ext_resource type="Texture2D" uid="uid://8hq6lban1nqq" path="res://Assets/Free 2/Items/Fruits/Collected.png" id="1_6auhy"]
[ext_resource type="Script" path="res://Scripts/Entities/teleporter.gd" id="1_mib8y"]
[ext_resource type="Script" path="res://Scripts/Components/click_component.gd" id="3_q6643"]
[ext_resource type="Script" path="res://Scripts/Components/toggle_component.gd" id="4_5g4cl"]
[ext_resource type="Script" path="res://Scripts/Components/detect_area_component.gd" id="5_qgmpp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ewn6"]
radius = 7.07107

[sub_resource type="AtlasTexture" id="AtlasTexture_jcog1"]
atlas = ExtResource("1_6auhy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocos6"]
atlas = ExtResource("1_6auhy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttki1"]
atlas = ExtResource("1_6auhy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmmoy"]
atlas = ExtResource("1_6auhy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmj2w"]
atlas = ExtResource("1_6auhy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntpwa"]
atlas = ExtResource("1_6auhy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n52se"]
atlas = ExtResource("1_6auhy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpwii"]
atlas = ExtResource("1_6auhy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv5sv"]
atlas = ExtResource("1_6auhy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ji2"]
atlas = ExtResource("1_6auhy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmokl"]
atlas = ExtResource("1_6auhy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dve3u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcog1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocos6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttki1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmmoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmj2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n52se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpwii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv5sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ji2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmokl")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="teleporter" type="Area2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_mib8y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -8)
shape = SubResource("CircleShape2D_5ewn6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -8)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_dve3u")
autoplay = "default"
frame_progress = 0.000735295

[node name="ClickComponent" type="Node2D" parent="." node_paths=PackedStringArray("click_component")]
position = Vector2(8, -8)
script = ExtResource("3_q6643")
click_component = NodePath("..")

[node name="ToggleComponent" type="Node" parent="."]
script = ExtResource("4_5g4cl")

[node name="DetectAreaComponent" type="Node" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("5_qgmpp")
entity = NodePath("..")
